--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
 FROM golang:1.25.6-alpine3.23
-RUN apk update && apk add git curl alpine-sdk nodejs npm
+RUN apk update && apk add git curl openssh-client alpine-sdk nodejs npm
 RUN npm install -g @openai/codex
 RUN go install github.com/aarondl/sqlboiler/v4@latest \
  && go install github.com/aarondl/sqlboiler/v4/drivers/sqlboiler-mysql@latest \
